# healthcare_NL

./: .gitignore  README.md  api_documentation.md  facility_count_by_municipality.csv  facility_count_by_municipality.geojson  geometry_utils.py  healthcare.ipynb  healthcare8.py  healthcare_NL.py  healthcare_filtered.geojson  healthcare_zuid_holland.geojson  high_risk_healthcare_map.html  popdensitylau.geojson  pyproject.toml  underserved_healthcare_map.html  zuid_holland_underserved_area.geojson
src/healthcare_nl/: healthcare_NL.py
tests/: test_geometry_utils.py  test_healthcare_NL.py
