[project]
name = "healthcare-nl"
version = "0.1.0"
description = ""
authors = [
    {name = "estherjesintha",email = "e.j.nallathambi@student.utwente.nl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "osmnx (>=2.0.7,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "ipython (>=9.9.0,<10.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "healthcare_nl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
